defaults/kubernetes/tailscale/kustomize/security/allow-to-internet.networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tailscale-ingress-allow-to-internet
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow egress traffic from Tailscale ingress pods to the public internet.
spec:
  podSelector:
    matchLabels:
      tailscale.com/managed: "true"
      tailscale.com/parent-resource-type: ingress
  policyTypes:
    - Egress
  egress:
    # Allow egress traffic to external public internet addresses while blocking private IP ranges
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
