defaults/kubernetes/tailscale/kustomize/security/allow-to-kubernetes-api.networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-ingress-allow-to-kubernetes-api
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow egress traffic from Tailscale ingress pods to the Kubernetes API.
spec:
  podSelector:
    matchLabels:
      tailscale.com/managed: "true"
      tailscale.com/parent-resource-type: ingress
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-apiserver
